# Prog-2025-1-3

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  lista.txt
lib/: astf.h
src/: main.c
test-files/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
